kubernetes/apps/network/envoy-gateway/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "ingress-from-envoy-external"
spec:
  description: "Allow pods that require ingress to allow traffic from external envoy, no port restrictions"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/envoy-external: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: proxy
            app.kubernetes.io/name: envoy
            gateway.networking.k8s.io/gateway-name: external
            io.kubernetes.pod.namespace: network
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "ingress-from-envoy-internal"
spec:
  description: "Allow pods that require ingress to allow traffic from internal envoy, no port restrictions"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/envoy-internal: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: proxy
            app.kubernetes.io/name: envoy
            gateway.networking.k8s.io/gateway-name: internal
            io.kubernetes.pod.namespace: network
